Organized study page layout.

--- a/app/src/main/res/layout/activity_create_station.xml
+++ b/app/src/main/res/layout/activity_create_station.xml
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="44dp"
-                android:layout_marginTop="56dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif"
                 android:text="LURE TYPE"
                 android:textColor="#FFFFFF"
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif"
                 android:text="HABITAT"
                 android:textColor="#FFFFFF"
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
-                android:layout_marginTop="90dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif"
                 android:text="TERRAIN"
                 android:textColor="#FFFFFF"
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="75dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif"
                 android:text="SUBSTRATE"
                 android:textColor="#FFFFFF"
@@ -127,9 +127,9 @@
                 android:layout_width="115dp"
                 android:layout_height="44dp"
                 android:layout_marginStart="45dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif"
-                android:text="Station"
+                android:text="STATION"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -140,9 +140,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="28dp"
                 android:fontFamily="sans-serif"
-                android:text="potential"
+                android:text="POTENTIAL"
                 android:textColor="#FFFFFF"
                 android:textSize="21dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -357,7 +357,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_begin="629dp" />
+                app:layout_constraintGuide_begin="800dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline5"
